# octopus-near-indexer-kafka

./: .dockerignore  .env.example  .gitignore  CHANGELOG-zh.md  Cargo.toml  Dockerfile  README-zh.md  README.md
src/: lib.rs  log.rs  tracing.rs  utils.rs
src/data/cli/: generate.rs  mod.rs
src/kafka/: config.rs  mod.rs  produce.rs
src/models/: cli.rs  mod.rs
src/models/analysis/: blocks.rs  chunks.rs  mod.rs
src/models/cli/: indexer.rs
