[package]
name = "octopus-near-indexer-kafka"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "=0.11.0-beta.2"
anyhow = "1.0.51"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
futures = "0.3.5"
humantime = "2.1.0"
itertools = "^0.10.3"
openssl-probe = { version = "0.1.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
rdkafka = { version = "0.28", features = ["dynamic-linking"] }
dotenv = "0.15.0"

near-indexer = { git = "https://github.com/near/nearcore", rev = "9b3d6ba551f561a028f0216051e031bc2ba0c6b7" }
# near-client = { git = "https://github.com/near/nearcore", rev = "9b3d6ba551f561a028f0216051e031bc2ba0c6b7" }
